style: fix view on small devices

--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -1,5 +1,5 @@
 .li {
-  min-width: 345px;
+  min-width: 200px;
   min-height: 45px;
   display: flex;
   justify-content: space-between;
