--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -8,5 +8,6 @@
     color: transparent;
     background-image: linear-gradient(to right, #60A5FA, #C084FC);
     background-clip: text;
+    text-align: center;
   }
 }
